# OpenRescue-Sim-AI-Driven-Disaster-Response-Robot-Simulation

./: .gitignore  Dockerfile  README.md  hackathon_plan.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
baseline/: plot_results.py  test_agent.py  train_hard.py  train_medium.py  train_rl.py
env/: base.py  gym_wrapper.py  models.py  tasks.py
logs/: monitor.csv
logs/PPO_1/: events.out.tfevents.1774629917.SaiArun.8104.0
logs/PPO_2/: events.out.tfevents.1774630053.SaiArun.10368.0
logs/PPO_3/: events.out.tfevents.1774630244.SaiArun.12928.0
logs/PPO_4/: events.out.tfevents.1774630382.SaiArun.13572.0
logs/PPO_5/: events.out.tfevents.1774630774.SaiArun.25244.0
logs/medium/: monitor.csv
server/: app.py
